@@ -33,6 +33,15 @@ Set the low battery warning threshold in percent at which shutdown is
 initiated by linkman:upsmon[8].  By default, the UPS may not report low battery
 until there are only a few seconds left.  Common values are around 25--30.
 
+*command_delay*='milliseconds'::
+Set a delay in milliseconds to be applied before each command sent to the UPS.
+The default value is 0 (disabled). If experiencing intermittent communication
+timeouts when multiple commands are sent in rapid succession, set this to
+1000 (1 second) or adjust as needed.
+
+This delay helps prevent "read timeout" errors when the hardware buffer is
+not ready to accept new commands immediately after completing the previous one.
+
 AUTHOR
 ------
 
